testsuite/bsc.verilog/splitports/PortNameConflict.bs.bsc-vcomp-out.expected
checking package dependencies
compiling PortNameConflict.bs
code generation for sysPortNameConflict starts
Error: "PortNameConflict.bs", line 30, column 0: (G0055)
  Method `putBar' generates a port with name `barIn_1_f_x' which conflicts
  with a port of the same name generated by method `putBar' at location
  "PortNameConflict.bs", line 30, column 0.
